# authentication

./: .env.template  .gitignore  README.md  pyproject.toml
authentication/: app.py  auth.py  database.py  models.py  schemas.py  settings.py  types.py
authentication/routers/: auth.py  user.py
migrations/: env.py
migrations/versions/: 4dd9c6a37711_create_user_model.py
tests/: conftest.py
tests/routers/: test_auth.py  test_users.py
